<resources>
    <string name="app_name">MobileMeshViewer</string>

    <string name="navigation_drawer_open">Navigationsleiste öffnen</string>
    <string name="navigation_drawer_close">Navigationsleiste schließen</string>

    <string name="toolbar_titel">MobileMeshViewer</string>
    <string name="toolbar_search_titel">Suche</string>

    <string name="snackbar_button_OK">OK</string>
    <string name="snackbar_success">Liste neu geladen</string>
    <string name="snackbar_fail">Aktualisierung fehlgeschlagen. Probiere es erneut.</string>

    <string name="fab_delete_node">Knoten wird nicht mehr überwacht</string>
    <string name="fab_add_node">Knoten wird jetzt überwacht</string>

    <string name="list_empty">Keinen Eintrag gefunden.</string>
    <string name="loading">Wird geladen…</string>

    <string name="separator">%1$s \\ %2$s</string>
    <string name="traffic_separator">%1$f / %2$s%3$s</string>
    <string name="ffhb_logo">Freifunk Logo</string>

    <string name="dialog_interval_title">Kleine Aktualisierungsrate</string>
    <string name="dialog_interval_msg">Häufige Aktualisierungen führen zu einem erhöhten Akku- und Datenverbrauch.\n\nSoll das Intervall %smin trotzdem beibehalten werden?</string>
    <string name="dialog_confirm">Ja</string>
    <string name="dialog_deny">Nein</string>

    <!-- Menu entries-->
    <string name="nav_myNodes">Meine Knoten</string>
    <string name="nav_nodeFinder">Knoten-Finder</string>
    <string name="nav_settings">Einstellungen</string>
    <string name="nav_calender">Kalender</string>
    <string name="nav_debug">Netzanalyse</string>
    <string name="nav_about">Über uns</string>
    <string name="nav_headline">Über Freifunk Bremen</string>
    <string name="nav_drawerheadline">Mobile Mesh Viewer</string>
    <string name="nav_subdrawerheadline">Freifunk Bremen</string>

    <!-- Activity titles-->
    <string name="title_activity_settings">Einstellungen</string>
    <string name="title_activity_my_nodes">Meine Knoten</string>
    <string name="title_activity_about_ffhb">Über uns</string>

    <!-- Tab titles-->
    <string name="fragment_node_titel">Knoten</string>
    <string name="fragment_gateway_titel">Gateways</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_node_mon">Knotenüberwachung</string>
    <string name="pref_description_node_mon">Prüfung der "Eigenen Knoten" auf Konnektivität</string>
    <string name="pref_default_node_mon">false</string>
    <string name="pref_title_gate_mon">Gatewayüberwachung</string>
    <string name="pref_description_gate_mon">Prüfung der Gateways auf Konnektivität</string>
    <string name="pref_default_gate_mon">false</string>
    <string name="pref_title_ringtone">Alarmton</string>
    <string name="pref_default_ringtone"></string>
    <string name="pref_ringtone_silent">Stumm</string>
    <string name="pref_ringtone_unknown">Unbekannter Klingelton</string>
    <string name="pref_title_vibrate">Vibrieren</string>
    <string name="pref_default_vibrate">false</string>
    <string name="pref_title_sync_frequency">Aktualisierungsrate</string>
    <string-array name="pref_sync_frequency_titles">
        <item>24 Stunden</item>
        <item>6 Stunden</item>
        <item>2 Stunden</item>
        <item>30 Minuten</item>
        <item>15 Minuten</item>
        <item>5 Minuten</item>
        <item>2 Minuten</item>
        <item>1 Minuten</item>
        <item>Manuell</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1440</item>
        <item>360</item>
        <item>120</item>
        <item>30</item>
        <item>15</item>
        <item>5</item>
        <item>2</item>
        <item>1</item>
        <item>-1</item>
    </string-array>
    <string name="pref_default_sync_frequency">15</string>
    <string name="pref_description_autostart">App bei Systemstart ausführen</string>
    <string name="pref_title_autostart">App in Autostart</string>
    <string name="pref_default_autostart">false</string>

    <!--  Node Detail Page-->
    <string name="node_hardware_label">Hardware</string>
    <string name="node_mac_label">Primäre MAC</string>
    <string name="node_node_id_label">Node ID</string>
    <string name="node_firmware_label">Firmware</string>
    <string name="node_uptime_label">Uptime</string>
    <string name="node_addresses_label">IP Adressen</string>
    <string name="node_autoupdate_label">Autom. Updates</string>
    <string name="node_clients_label">Clients</string>
    <string name="node_loadavg_label">Systemlast (CPU/Mem)</string>
    <string name="node_traffic_label">Traffic</string>
    <string name="node_owner_label">Kontakt</string>
    <string name="node_install_date_label">Teil des Netzes</string>

    <string name="gateway_uplink_label">Uplink</string>
    <string name="gateway_address_label">Adresse</string>
    <string name="gateway_ntp_label">NTP</string>
    <string name="gateway_dns_label">DNS</string>
    <string name="gateway_ipv4_label">IPv4</string>
    <string name="gateway_ipv6_label">IPv6</string>
    <string name="gateway_traffic_label">Traffic</string>
    <string name="gateway_firmware_label">Firmware</string>
    <string name="gateway_uptime_label">Uptime</string>
    <string name="gateway_loadavg_label">Systemlast (CPU/Mem)</string>
    <string name="gateway_install_date_label">Teil des Netzes</string>


    <string name="minute">Minute</string>
    <string name="hour">Stunde</string>
    <string name="day">Tag</string>
    <string name="minutes">Minuten</string>
    <string name="hours">Stunden</string>
    <string name="days">Tage</string>
    <string name="autoupdate_enabled">aktiviert</string>
    <string name="autoupdate_disabled">deaktiviert</string>

    <string name="contact_intro">Freifunk ist eine ehrenamtliche Initiative, die versucht ein freies Netzwerk auf Basis von WLAN-Routern aufzubauen. Jede(r) kann mitmachen und ist willkommen. Erreichen kannst du uns über:</string>
    <string name="contact_e_mail_label">E-Mail</string>
    <string name="contact_chat_label">IRC</string>
    <string name="contact_chat">https://webirc.hackint.org/#ffhb</string>
    <string name="contact_chat_message">Besuche uns im IRC</string>
    <string name="contact_e_mail">Info@bremen.freifunk.net</string>
    <string name="contact_e_mail_message">Schreib uns eine Mail!</string>
    <string name="contact_twitter_label">Twitter</string>
    <string name="contact_twitter">https://twitter.com/FreifunkHB</string>
    <string name="contact_twitter_message">Schreibe uns auf Twitter</string>
    <string name="contact_facebook_label">Facebook</string>
    <string name="contact_facebook">https://www.facebook.com/FreifunkBremen</string>
    <string name="contact_facebook_message">Schreibe uns auf Facebook</string>
    <string name="contact_meetings">Außerdem treffen wir uns jeden 1. und 3. Freitag im Monat im Hackerspace Bremen</string>
    <string name="contact_website">https://bremen.freifunk.net</string>
    <string name="contact_website_message">Besuche unsere Website</string>
    <string name="contact_website_label">Website</string>
</resources>
