<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_myNodes" android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/nav_myNodes" />
        <item android:id="@+id/nav_nodeFinder" android:icon="@android:drawable/ic_menu_search"
            android:title="@string/nav_nodeFinder" />
        <item android:id="@+id/nav_settings" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/nav_settings" />
        <item android:id="@+id/nav_debug" android:icon="@android:drawable/ic_dialog_alert"
            android:title="@string/nav_debug" />
    </group>

    <item android:title="@string/nav_headline">
        <menu>
            <item android:id="@+id/nav_calender" android:icon="@android:drawable/ic_menu_my_calendar"
                android:title="@string/nav_calender" />
            <item android:id="@+id/nav_about" android:icon="@android:drawable/ic_dialog_info"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>